--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
+# Production build
 dist
 build
 
@@ -30,7 +30,8 @@ Thumbs.db
 .gitignore
 
 # Docker
-Dockerfile
+Dockerfile*
+docker-compose*
 .dockerignore
 
 # Logs
