--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
 
         # API proxy configuration
         location /api/ {
-            proxy_pass http://159.203.37.5:8080/api/;
+            proxy_pass https://4413groupa.me:8081/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
