--- a/nginx.conf
+++ b/nginx.conf
@@ -22,14 +22,14 @@ http {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
 
     server {
-        listen 8081;
+        listen 80;
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
 
         # API proxy configuration
         location /api/ {
-            proxy_pass https://4413groupa.me:8081/api/;
+            proxy_pass http://4413groupa.me:8081/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
