--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
+    error_log /var/log/nginx/error.log;
 
     # Gzip compression
     gzip on;
@@ -29,19 +29,12 @@ http {
         application/json;
 
     server {
-        listen 8888;
+        listen 80;
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-
-        # Handle React Router - serve index.html for all routes
+        # Handle client-side routing
         location / {
             try_files $uri $uri/ /index.html;
         }
@@ -52,11 +45,11 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
     }
 } 
