--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,70 +1,46 @@
+version: '3.8'
+
 services:
-  # React Frontend
-  frontend:
-    build: .
-    container_name: greendrive-frontend
-    restart: unless-stopped
+  # Development service
+  app-dev:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: development
+    ports:
+      - "5173:5173"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+      - VITE_API_URL=https://4413groupa.me
+    stdin_open: true
+    tty: true
+    profiles:
+      - dev
+
+  # Production service
+  app-prod:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: production
     ports:
       - "3000:80"
-    depends_on:
-      - backend
-    networks:
-      - greendrive-network
-
-  # MySQL Database
-  mysql:
-    image: mysql:8.0
-    container_name: greendrive-mysql
-    restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: 12345678
-      MYSQL_DATABASE: greendrive_db
-      MYSQL_USER: greendrive_user
-      MYSQL_PASSWORD: greendrive_pass
+      - NODE_ENV=production
+    profiles:
+      - prod
+
+  # Optional: Nginx reverse proxy for development with API proxy
+  nginx-dev:
+    image: nginx:alpine
     ports:
-      - "3306:3306"
+      - "8080:80"
     volumes:
-      - mysql_data:/var/lib/mysql
-      # Uncomment the line below if you have database initialization scripts
-      # - ./mysql/init:/docker-entrypoint-initdb.d
-    networks:
-      - greendrive-network
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
-
-  # Spring Boot Backend (assuming it's in a separate directory)
-  backend:
-    build: ../GreenDrive-Backend  # Adjust this path to your backend directory
-    container_name: greendrive-backend
-    restart: unless-stopped
-    ports:
-      - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/greendrive_db
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: 12345678
-      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop
-      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
-      JWT_SECRET: thisIsMysecregtfrdesww233hoaiklasdleasdnamdgkjjhhtdhttebd54ns8877465sbbdd
-      JWT_EXPIRATION: 3600000
+      - ./nginx-dev.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      mysql:
-        condition: service_healthy
-    networks:
-      - greendrive-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 60s
-
-volumes:
-  mysql_data:
-    driver: local
-
-networks:
-  greendrive-network:
-    driver: bridge
+      - app-dev
+    profiles:
+      - dev-proxy
