--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,51 @@
+# Dependencies
 node_modules
-npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production build
+dist
+build
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+
+# Git
 .git
 .gitignore
-README.md
-.env
-.nyc_output
-coverage
+
+# IDE
 .vscode
+.idea
+*.swp
+*.swo
+
+# OS
 .DS_Store
-dist
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Docker
+Dockerfile*
+docker-compose*
+.dockerignore
+
+# Misc
+README.md
+.eslintrc*
+.prettierrc*
+coverage
+.nyc_output
